@@ -60,11 +60,9 @@ public abstract class PermissionOwner<T extends PermissionOwnerId<? extends Perm
 	 * 
 	 * @return A set of the permissions hold by the owner.
 	 */
-	public Set<ConqueryPermission> getPermissions(){
+	public Set<Permission> getPermissions(){
 		// HashSet uses internally an iterator for copying, so we need to synchronize this
-		synchronized (permissions) {
-			return Set.copyOf(permissions);
-		}
+		return Collections.unmodifiableSet(permissions);
 	}
 
 	public void setPermissions(MasterMetaStorage storage, Set<ConqueryPermission> permissionsNew) {
